Fix markdown display
The English markdown was being displayed without the proper spacing,
making it hard to read and unrepresentative of the markdown that needs
translating.

--- a/app/frontend/styles/_app_form_field_table.scss
+++ b/app/frontend/styles/_app_form_field_table.scss
@@ -32,3 +32,10 @@
 .app-form-field-table .govuk-table__header[scope="row"] {
   width: 25%;
 }
+
+.app-form-field-table__markdown-preview {
+  white-space: pre-wrap;
+  font-size: inherit;
+  font-family: inherit;
+  margin: 0;
+}
